--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "json-api-fetch",
-  "version": "0.4.1",
+  "version": "0.5.2",
   "description": "基于fetch实现的JSON API标准",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npm run clean && tsc",
-    "clean": "shx rm -rf dist",
+    "build": "tsup",
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build"
   },
@@ -25,11 +25,10 @@
   },
   "homepage": "https://github.com/mervynyang/json-api-fetch#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.21",
-    "cpr": "^3.0.1",
-    "jest": "^24.9.0",
-    "shx": "^0.3.2",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.6.4"
+    "@types/jest": "^28.1.6",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
+    "tsup": "^6.2.1",
+    "typescript": "^4.7.4"
   }
 }
