--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "json-api-fetch",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "description": "基于fetch实现的JSON API标准",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "tsup",
-    "test": "jest --config jestconfig.json",
     "prepare": "npm run build"
   },
   "repository": {
@@ -25,10 +27,11 @@
   },
   "homepage": "https://github.com/mervynyang/json-api-fetch#readme",
   "devDependencies": {
-    "@types/jest": "^28.1.6",
-    "jest": "^28.1.3",
-    "ts-jest": "^28.0.7",
-    "tsup": "^6.2.1",
-    "typescript": "^4.7.4"
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
+    "eslint-config-tencent": "^1.0.4",
+    "tsup": "^7.1.0",
+    "typescript": "^5.1.6"
   }
 }
